Add some informational text.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
   <body>
     <table>
       <tr><td class="outertd">
+        <p style='text-align: left;  font-size: 18px;'>
+          These exams used to be posted at braintrax.mst.edu, but were taken down between February and July 2019.  They were retrieved via the the Wayback Machine.
+        </p>
+        <p style='text-align: left;  font-size: 18px;'>
+          Working these exams is an excellent way to prepare for the Missouri S&T Math Placement test.  This is better than reviewing your textbook by far, since the questions in these exams are much like those on the placement test.
+        </p>
         <div style='background: blue; color: white; padding: 5px; float: left;'>
           <strong>Algebra Exams</strong>
 
