Make index more mobile friendly.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="description" content="A collection of practice exams for preparing for the Missouri S&T Math Placement Test.  These used to be on the 'braintrax' site, but were taken down.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style type='text/css'>
       td {
         width: 200px;
@@ -11,15 +12,18 @@
       .outertd {
         width: auto;
       }
+      p, div {
+        font-size: 18px;
+      }
     </style>
   </head>
   <body>
     <table>
       <tr><td class="outertd">
-        <p style='text-align: left;  font-size: 18px;'>
+        <p style='text-align: left;'>
           These exams used to be posted at braintrax.mst.edu, but were taken down between February and July 2019.  They were retrieved via the the Wayback Machine.
         </p>
-        <p style='text-align: left;  font-size: 18px;'>
+        <p style='text-align: left;'>
           Working these exams is an excellent way to prepare for the Missouri S&T Math Placement test.  This is better than reviewing your textbook by far, since the questions in these exams are much like those on the placement test.
         </p>
         <div style='background: blue; color: white; padding: 5px; float: left;'>
