Change index.html: link to originals rather than linking to my github-hosted copies.

--- a/index.html
+++ b/index.html
@@ -5,174 +5,20 @@
     <meta name="description" content="A collection of practice exams for preparing for the Missouri S&T Math Placement Test.  These used to be on the 'braintrax' site, but were taken down.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style type='text/css'>
-      td {
-        width: 200px;
-        text-align: center;
-      }
-      .outertd {
-        width: auto;
-      }
-      p, div {
+      p {
         font-size: 18px;
       }
     </style>
   </head>
   <body>
-    <table>
-      <tr><td class="outertd">
-        <p style='text-align: left;'>
-          These exams used to be posted at braintrax.mst.edu, but were taken down between February and July 2019.  They were retrieved via the the Wayback Machine.
-        </p>
-        <p style='text-align: left;'>
-          Working these exams is an excellent way to prepare for the Missouri S&T Math Placement test.  This is better than reviewing your textbook by far, since the questions in these exams are much like those on the placement test.
-        </p>
-        <div style='background: blue; color: white; padding: 5px; float: left;'>
-          <strong>Algebra Exams</strong>
-
-          <br>
-          <br>
-
-          Unworked Exams
-          <table style='background: white; color: black;'>
-            <tr>
-              <th>Test 1</th>
-              <th>Test 2</th>
-              <th>Test 3</th>
-              <th>Test 4</th>
-            </tr>
-            <tr>
-              <td>
-                <a href='M4_exam_1_fs97.pdf'>1997</a><br>
-                <a href='M4_exam_1_fs98.pdf'>1998</a><br>
-                <a href='M4_exam_1_ws99.pdf'>1999</a>
-              </td>
-              <td>
-                <a href='M4_exam_2_fs97.pdf'>1997</a><br>
-                <a href='M4_exam_2_fs98.pdf'>1998</a><br>
-                <a href='M4_exam_2_ws99.pdf'>1999</a>
-              </td>
-              <td>
-                <a href='M4_exam_3_fs97.pdf'>1997</a><br>
-                <a href='M4_exam_3_fs98.pdf'>1998</a><br>
-                <a href='M4_exam_3_ws99.pdf'>1999</a>
-              </td>
-              <td>
-                <a href='M4_exam_4_fs97.pdf'>1997</a><br>
-                <a href='M4_exam4_fs98.pdf'>1998</a><br>
-                <a href='M4_exam_4_ws99.pdf'>1999</a>
-              </td>
-            </tr>
-          </table>
-
-          <br>
-
-          Worked Exams
-          <table style='background: white; color: black;'>
-            <tr>
-              <th>Test 1</th>
-              <th>Test 2</th>
-              <th>Test 3</th>
-              <th>Test 4</th>
-            </tr>
-            <tr>
-              <td>
-                <a href='fall97exam1.pdf'>1997</a><br>
-                <a href='fall98exam1.pdf'>1998</a><br>
-                1999
-              </td>
-              <td>
-                <a href='fall97exam2.pdf'>1997</a><br>
-                <a href='fall98exam2.pdf'>1998</a><br>
-                1999
-              </td>
-              <td>
-                <a href='fall97exam3.pdf'>1997</a><br>
-                <a href='fall98exam3.pdf'>1998</a><br>
-                1999
-              </td>
-              <td>
-                1997<br>
-                <a href='fall98exam4.pdf'>1998</a><br>
-                1999
-              </td>
-            </tr>
-          </table>
-        </div>
-      </td></tr>
-    
-    
-
-      <tr><td class="outertd">
-        <div style='background: blue; color: white; padding: 5px; float: left;'>
-          <strong>Trigonometry Exams</strong>
-
-          <br>
-          <br>
-
-          Unworked Exams
-          <table style='background: white; color: black;'>
-            <tr>
-              <th>1996</th>
-              <th>1997</th>
-              <th>1998</th>
-              <th>1998</th>
-            </tr>
-            <tr>
-              <td>
-                <a href='Oct96Exam2.pdf'>Fall Exam 2A</a><br>
-                <a href='fs96exam2.pdf'>Fall Exam 2B</a><br>
-                <a href='fs96exam2B.pdf'>Fall Exam 2C</a>
-              </td>
-              <td>
-                <a href='fs97ex1.pdf'>Fall Exam 1</a><br>
-                <a href='fs97exam2.pdf'>Fall Exam 2</a><br>
-                <a href='fs97exam3.pdf'>Fall Exam 3</a>
-              </td>
-              <td>
-                <a href='ws98ex1.pdf'>Winter Exam 1</a><br>
-                <a href='ws98exam2.pdf'>Winter Exam 2</a><br>
-                <a href='ws98exam3.pdf'>Winter Exam 3</a>
-              </td>
-              <td>
-                <a href='fs98ex1.pdf'>Fall Exam 1</a><br>
-                <a href='fs98ex2.pdf'>Fall Exam 2</a><br>
-                <a href='fs98ex3.pdf'>Fall Exam 3</a>
-              </td>
-            </tr>
-          </table>
-
-          <br>
-
-          Worked Exams
-          <table style='background: white; color: black;'>
-            <tr>
-              <th></th>
-              <th>1997</th>
-              <th>1998</th>
-              <th>1998</th>
-            </tr>
-            <tr>
-              <td>
-              </td>
-              <td>
-                <a href='fs97ex1key.pdf'>Fall Exam 1</a><br>
-                <a href='fs97ex2key.pdf'>Fall Exam 2</a><br>
-                <a href='fs97ex3key.pdf'>Fall Exam 3</a>
-              </td>
-              <td>
-                <br>
-                <a href='ws98ex2key.pdf'>Winter Exam 2</a><br>
-                <a href='ws98ex3key.pdf'>Winter Exam 3</a>
-              </td>
-              <td>
-                <a href='fs98ex1key.pdf'>Fall Exam 1</a><br>
-                <a href='fs98ex2key.pdf'>Fall Exam 2</a><br>
-                <a href='fs98ex3key.pdf'>Fall Exam 3</a>
-              </td>
-            </tr>
-          </table>
-        </div>
-      </td></tr>
-    </table>
+    <p style='text-align: left;'>
+      There used to be a collection of practice exams for the Missouri S&T Mathematics Placement Test at the site braintrax.mst.edu, but were taken down between February and July 2019.  The site archive.org makes them available today.
+    </p>
+    <p style='text-align: left;'>
+      <strong>Algebra Exams: </strong><a href="https://web.archive.org/web/20100610161501/http://braintrax.mst.edu/math/algebra/visitoralgebraexams.htm">https://web.archive.org/web/20100610161501/http://braintrax.mst.edu/math/algebra/visitoralgebraexams.htm</a>
+    </p>
+    <p style='text-align: left;'>
+      <strong>Trigonometry Exams: </strong><a href="https://web.archive.org/web/20100610161501/http://braintrax.mst.edu/math/trig/visitortrigexams.htm">https://web.archive.org/web/20100610161501/http://braintrax.mst.edu/math/trig/visitortrigexams.htm</a>
+    </p>
   </body>
 </html>
