--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <p style='text-align: left;'>
-      There used to be a collection of practice exams for the Missouri S&T Mathematics Placement Test at the site braintrax.mst.edu, but were taken down between February and July 2019.  The site archive.org makes them available today.
+      There used to be a collection of practice exams for the Missouri S&T Mathematics Placement Test at the site braintrax.mst.edu, but they were taken down between February and July 2019.  The site archive.org makes them available.
     </p>
     <p style='text-align: left;'>
       <strong>Algebra Exams: </strong><a href="https://web.archive.org/web/20100610161501/http://braintrax.mst.edu/math/algebra/visitoralgebraexams.htm">https://web.archive.org/web/20100610161501/http://braintrax.mst.edu/math/algebra/visitoralgebraexams.htm</a>
