Attempt to fix "Text too small to read" search console mobile usability issue

--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     <style type='text/css'>
       p {
         font-size: 18px;
+        text-align: left;
+        word-wrap: break-word;
       }
     </style>
   </head>
   <body>
-    <p style='text-align: left;'>
+    <p>
       There used to be a collection of practice exams for the Missouri S&T Mathematics Placement Test at the site braintrax.mst.edu, but they were taken down between February and July 2019.  The site archive.org makes them available.
     </p>
-    <p style='text-align: left;'>
+    <p>
       <strong>Algebra Exams: </strong><a href="https://web.archive.org/web/20100610161501/http://braintrax.mst.edu/math/algebra/visitoralgebraexams.htm">https://web.archive.org/web/20100610161501/http://braintrax.mst.edu/math/algebra/visitoralgebraexams.htm</a>
     </p>
-    <p style='text-align: left;'>
+    <p>
       <strong>Trigonometry Exams: </strong><a href="https://web.archive.org/web/20100610161501/http://braintrax.mst.edu/math/trig/visitortrigexams.htm">https://web.archive.org/web/20100610161501/http://braintrax.mst.edu/math/trig/visitortrigexams.htm</a>
     </p>
   </body>
